--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-md-8 col-lg-4">
                         <div class="d-flex align-items-center justify-content-center py-1 py-md-2 py-lg-3">
-                            <span class="fz-2 text-uppercase color-white">Акции месяца!</span>
+                            <span class="fs-28 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
                             <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
-                        <p class="fz-15 fw-light mb-0">Профессиональный</p>
+                        <p class="fs-20 fs-lg-24 fw-light mb-0">Профессиональный</p>
                         <h1 class="text-uppercase fw-bold mb-5">Веб-разработчик и надежный бизнес-партнер</h1>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-01.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">Вождь</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">Вождь</p>
                                 <p class="small">Алексей</p>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-04.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">HR-директор</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">HR-директор</p>
                                 <p class="small">Юля</p>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-02.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">Программист</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">Программист</p>
                                 <p class="small">Павел</p>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-03.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">Дизайнер</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">Дизайнер</p>
                                 <p class="small">Юля</p>
                             </div>
                         </div>
@@ -174,7 +174,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-05.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">SEO-специалист</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">SEO-специалист</p>
                                 <p class="small">Александр</p>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-06.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">Проектный менеджер</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">Проектный менеджер</p>
                                 <p class="small">Денис</p>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-07.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">Верстальщик</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">Верстальщик</p>
                                 <p class="small">Андрей</p>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-08.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">Контент-менеджер</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">Контент-менеджер</p>
                                 <p class="small">Лада</p>
                             </div>
                         </div>
@@ -210,7 +210,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-09.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">Менеджер по продажам</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">Менеджер по продажам</p>
                                 <p class="small">Дмитрий</p>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                         <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-10.png" alt="">
                             <div class="ps-3">
-                                <p class="fz-15 fw-bold mb-0">Менеджер по продажам</p>
+                                <p class="fs-20 fs-lg-24 fw-bold mb-0">Менеджер по продажам</p>
                                 <p class="small">Виктор</p>
                             </div>
                         </div>
@@ -233,7 +233,7 @@
                 <div class="row justify-content-center mb-7">
                     <div class="col-12 text-center">
                         <h2 class="h1 fw-bold mb-5">Веб-студия Starsite занимается разработкой сайтов для России и зарубежных рынков с 2012 года </h2>
-                        <p class="fz-15 fw-light">Наша команда — более 20 сотрудников в разных странах и городах.<br>
+                        <p class="fs-20 fs-lg-24 fw-light">Наша команда — более 20 сотрудников в разных странах и городах.<br>
                             Понимание потребностей онлайн-бизнеса, опыт взаимодействия с тысячами клиентов, высокая квалификация персонала, собственные «ноу-хау» и  высокое качество по удивительно низким и «вкусным» ценам.</p>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                         <div class="accordion accordion-advantage py-0 py-lg-5" id="advantage">
                             <div class="accordion-item">
                                 <div class="accordion-header" id="advantage-heading-1">
-                                    <button class="accordion-button fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a1" aria-expanded="true" aria-controls="a1">
+                                    <button class="accordion-button fs-20 fs-lg-24" type="button" data-bs-toggle="collapse" data-bs-target="#a1" aria-expanded="true" aria-controls="a1">
                                         Готовые сайты &amp; Интернет-магазины
                                     </button>
                                 </div>
@@ -261,7 +261,7 @@
 
                             <div class="accordion-item">
                                 <div class="accordion-header" id="advantage-heading-2">
-                                    <button class="accordion-button collapsed fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a2" aria-expanded="false" aria-controls="a2">
+                                    <button class="accordion-button collapsed fs-20 fs-lg-24" type="button" data-bs-toggle="collapse" data-bs-target="#a2" aria-expanded="false" aria-controls="a2">
                                         Техническая поддерка &amp; Интеграции
                                     </button>
                                 </div>
@@ -274,7 +274,7 @@
 
                             <div class="accordion-item">
                                 <div class="accordion-header" id="advantage-heading-3">
-                                    <button class="accordion-button collapsed fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a3" aria-expanded="false" aria-controls="a3">
+                                    <button class="accordion-button collapsed fs-20 fs-lg-24" type="button" data-bs-toggle="collapse" data-bs-target="#a3" aria-expanded="false" aria-controls="a3">
                                         SEO-продвижение &amp; Контекстная реклама
                                     </button>
                                 </div>
@@ -287,7 +287,7 @@
 
                             <div class="accordion-item">
                                 <div class="accordion-header" id="advantage-heading-4">
-                                    <button class="accordion-button collapsed fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a4" aria-expanded="false" aria-controls="a4">
+                                    <button class="accordion-button collapsed fs-20 fs-lg-24" type="button" data-bs-toggle="collapse" data-bs-target="#a4" aria-expanded="false" aria-controls="a4">
                                         Хостинг и домен
                                     </button>
                                 </div>
@@ -303,46 +303,68 @@
             </div>
         </section>
 
+        <!-- Отзывы -->
         <section class="section py-5 pb-7 dark-mode bg-color-black color-white">
             <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12 text-lg-center">
-                        <p class="fz-15 fw-light mb-0">Есть мнение</p>
-                        <p class="h1 fw-bold mb-7">Нас описывают как профессиональную команду</p>
+                <div class="row">
+                    <div class="col-10">
+                        <p class="fs-20 fs-lg-24 fw-light mb-0">Есть мнение</p>
+                        <p class="h1 text-uppercase fw-bold mb-6">Нас знают как команду экспертов</p>
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-7">
+                <div class="row">
+                    <div class="col-lg-10">
                         <div class="swiper testimonialSwiper">
                             <div class="swiper-wrapper mb-5">
                                 <div class="swiper-slide">
-                                    <p class="fz-15">ОАО «Завод имени В.А. Дегтярева»</p>
-                                    <div style="color: #CDCFD0;">
-                                        <p>“ОАО «Завод имени В.А. Дегтярева» выражает искреннюю признательность и благодарность коллективу веб-студии «СтартСайт» за техническую поддержку и адаптацию каталога продукции сайта www.zid.ru на французский язык.”</p>
-                                    </div>
-                                    <div class="mt-5">
-                                        <p class="mb-2">В.Г. Мандельштам</p>
-                                        <p class="small fw-light">Начальник управления продаж продукции ОАО «ЗиД»</p>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <p class="fz-15">ОАО «Завод имени В.А. Дегтярева»</p>
-                                    <div style="color: #CDCFD0;">
-                                        <p>“ОАО «Завод имени В.А. Дегтярева» выражает искреннюю признательность и благодарность коллективу веб-студии «СтартСайт» за техническую поддержку и адаптацию каталога продукции сайта www.zid.ru на французский язык.”</p>
-                                    </div>
-                                    <div class="mt-5">
-                                        <p class="mb-2">В.Г. Мандельштам</p>
-                                        <p class="small fw-light">Начальник управления продаж продукции ОАО «ЗиД»</p>
+                                    <div class="row gy-4">
+                                        <div class="col-md-3">
+                                            <img class="w-100" src="img/testimonial-01.png" alt="">
+                                        </div>
+                                        <div class="col-md-9">
+                                            <p class="fs-20 fs-lg-24">ОАО «Завод имени В.А. Дегтярева»</p>
+                                            <div style="color: #CDCFD0;">
+                                                <p>“ОАО «Завод имени В.А. Дегтярева» выражает искреннюю признательность и благодарность коллективу веб-студии «СтартСайт» за техническую поддержку и адаптацию каталога продукции сайта www.zid.ru на французский язык.”</p>
+                                            </div>
+                                            <div class="mt-5">
+                                                <p class="mb-2">В.Г. Мандельштам</p>
+                                                <p class="small fw-light">Начальник управления продаж продукции ОАО «ЗиД»</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
-                                    <p class="fz-15">ОАО «Завод имени В.А. Дегтярева»</p>
-                                    <div style="color: #CDCFD0;">
-                                        <p>“ОАО «Завод имени В.А. Дегтярева» выражает искреннюю признательность и благодарность коллективу веб-студии «СтартСайт» за техническую поддержку и адаптацию каталога продукции сайта www.zid.ru на французский язык.”</p>
+                                    <div class="row gy-4">
+                                        <div class="col-md-3">
+                                            <img class="w-100" src="img/testimonial-01.png" alt="">
+                                        </div>
+                                        <div class="col-md-9">
+                                            <p class="fs-20 fs-lg-24">ОАО «Завод имени В.А. Дегтярева»</p>
+                                            <div style="color: #CDCFD0;">
+                                                <p>“ОАО «Завод имени В.А. Дегтярева» выражает искреннюю признательность и благодарность коллективу веб-студии «СтартСайт» за техническую поддержку и адаптацию каталога продукции сайта www.zid.ru на французский язык.”</p>
+                                            </div>
+                                            <div class="mt-5">
+                                                <p class="mb-2">В.Г. Мандельштам</p>
+                                                <p class="small fw-light">Начальник управления продаж продукции ОАО «ЗиД»</p>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="mt-5">
-                                        <p class="mb-2">В.Г. Мандельштам</p>
-                                        <p class="small fw-light">Начальник управления продаж продукции ОАО «ЗиД»</p>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="row gy-4">
+                                        <div class="col-md-3">
+                                            <img class="w-100" src="img/testimonial-01.png" alt="">
+                                        </div>
+                                        <div class="col-md-9">
+                                            <p class="fs-20 fs-lg-24">ОАО «Завод имени В.А. Дегтярева»</p>
+                                            <div style="color: #CDCFD0;">
+                                                <p>“ОАО «Завод имени В.А. Дегтярева» выражает искреннюю признательность и благодарность коллективу веб-студии «СтартСайт» за техническую поддержку и адаптацию каталога продукции сайта www.zid.ru на французский язык.”</p>
+                                            </div>
+                                            <div class="mt-5">
+                                                <p class="mb-2">В.Г. Мандельштам</p>
+                                                <p class="small fw-light">Начальник управления продаж продукции ОАО «ЗиД»</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -420,7 +442,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
-                        <p class="fz-17 fw-light">Закажи сайт для своего бизнеса</p>
+                        <p class="fs-24 fs-lg-28 fw-light">Закажи сайт для своего бизнеса</p>
                         <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                     </div>
                     <form class="needs-validation" novalidate>
@@ -473,7 +495,7 @@
                 <div class="modal-body">
                     <div class="d-flex align-items-center" style="min-height: 520px;">
                         <div class="text-center">
-                            <p class="fz-17 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
+                            <p class="fs-24 fs-lg-28 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
                             <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                         </div>
                     </div>
