--- a/cases.html
+++ b/cases.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-md-8 col-lg-4">
                         <div class="d-flex align-items-center justify-content-center py-1 py-md-2 py-lg-3">
-                            <span class="fz-2 text-uppercase color-white">Акции месяца!</span>
+                            <span class="fs-28 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
                             <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                         <article class="card card-case h-100">
                             <img class="card-img-top" src="img/case-01.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fs-20 fs-lg-24 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </article>
@@ -127,7 +127,7 @@
                         <article class="card card-case h-100">
                             <img class="card-img-top" src="img/case-02.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fs-20 fs-lg-24 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </article>
@@ -136,7 +136,7 @@
                         <article class="card card-case h-100">
                             <img class="card-img-top" src="img/case-03.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fs-20 fs-lg-24 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </article>
@@ -145,7 +145,7 @@
                         <article class="card card-case h-100">
                             <img class="card-img-top" src="img/case-04.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fs-20 fs-lg-24 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </article>
@@ -154,7 +154,7 @@
                         <article class="card card-case h-100">
                             <img class="card-img-top" src="img/case-05.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fs-20 fs-lg-24 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </article>
@@ -163,7 +163,7 @@
                         <article class="card card-case h-100">
                             <img class="card-img-top" src="img/case-06.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fs-20 fs-lg-24 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </article>
@@ -239,7 +239,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
-                        <p class="fz-17 fw-light">Закажи сайт для своего бизнеса</p>
+                        <p class="fs-24 fs-lg-28 fw-light">Закажи сайт для своего бизнеса</p>
                         <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                     </div>
                     <form class="needs-validation" novalidate>
@@ -292,7 +292,7 @@
                 <div class="modal-body">
                     <div class="d-flex align-items-center" style="min-height: 520px;">
                         <div class="text-center">
-                            <p class="fz-17 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
+                            <p class="fs-24 fs-lg-28 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
                             <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                         </div>
                     </div>
