--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-md-8 col-lg-4">
                         <div class="d-flex align-items-center justify-content-center py-2 py-lg-3">
-                            <span class="fz-2 text-uppercase color-white">Акции <span class="d-none d-md-inline">месяца!</span></span>
+                            <span class="fs-28 fs-lg-32 text-uppercase color-white">Акции <span class="d-none d-md-inline">месяца!</span></span>
                             <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                     <div class="col-lg-10 text-center">
                         <div class="mb-4">
                             <h1 class="text-uppercase fw-bold mb-3">Разработка сайтов в Москве</h1>
-                            <p class="fz-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque at nostrum voluptatum qui maiores placeat magni deserunt veniam laborum nesciunt sit corporis aut ut, excepturi eveniet assumenda dicta officia quo!</p>
+                            <p class="fs-20 fs-lg-24">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque at nostrum voluptatum qui maiores placeat magni deserunt veniam laborum nesciunt sit corporis aut ut, excepturi eveniet assumenda dicta officia quo!</p>
                         </div>
                         <a class="btn btn-primary btn-lg" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Связаться</a>
                     </div>
@@ -320,7 +320,7 @@
                 </div>
                 <div class="row justify-content-center mt-5">
                     <div class="col-12 text-center">
-                        <a class="link-blue text-decoration-none fz-12 fw-bold" href="shop.html">Посмотреть более 2200 шаблонов</a>
+                        <a class="link-blue text-decoration-none fs-16 fs-lg-18 fw-bold" href="shop.html">Посмотреть более 2200 шаблонов</a>
                     </div>
                 </div>
             </div>
@@ -340,9 +340,9 @@
                         <div class="card card-pricing h-100">
                             <div class="card-body pb-0">
                                 <div class="text-center">
-                                    <p class="fz-2 fw-bold">Тариф<br> «Минимальный»</p>
+                                    <p class="fs-28 fs-lg-32 fw-bold">Тариф<br> «Минимальный»</p>
                                     <p class="fw-light small">CMS: Wordpress</p>
-                                    <p class="fz-2 fw-bold py-4">5 950 ₽</p>
+                                    <p class="fs-28 fs-lg-32 fw-bold py-4">5 950 ₽</p>
                                 </div>
                                 <ul class="lh-4">
                                     <li>Домен (.ru/.рф)</li>
@@ -363,9 +363,9 @@
                         <div class="card card-pricing h-100">
                             <div class="card-body pb-0">
                                 <div class="text-center">
-                                    <p class="fz-2 fw-bold">Тариф<br> «Средний»</p>
+                                    <p class="fs-28 fs-lg-32 fw-bold">Тариф<br> «Средний»</p>
                                     <p class="fw-light small">CMS: Wordpress, OpenCart или ModX</p>
-                                    <p class="fz-2 fw-bold py-4">10 950 ₽</p>
+                                    <p class="fs-28 fs-lg-32 fw-bold py-4">10 950 ₽</p>
                                 </div>
                                 <ul class="lh-4">
                                     <li>Домен (.ru/.рф)</li>
@@ -391,9 +391,9 @@
                         <div class="card card-pricing h-100">
                             <div class="card-body pb-0">
                                 <div class="text-center">
-                                    <p class="fz-2 fw-bold">Тариф<br> «Максимальный»</p>
+                                    <p class="fs-28 fs-lg-32 fw-bold">Тариф<br> «Максимальный»</p>
                                     <p class="fw-light small">CMS: Wordpress, OpenCart или ModX</p>
-                                    <p class="fz-2 fw-bold py-4">22 950 ₽</p>
+                                    <p class="fs-28 fs-lg-32 fw-bold py-4">22 950 ₽</p>
                                 </div>
                                 <ul class="lh-4">
                                     <li>Домен (.ru/.рф)</li>
@@ -427,12 +427,12 @@
         <!-- Услуги -->
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <p class="fz-15 fw-light">Услуги</p>
-                <p class="fz-17 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Техническая поддержка</span> от 15 000 руб. месяц</p>
-                <p class="fz-17 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Экспресс-дизайн</span> от 3 500 руб. месяц</p>
-                <p class="fz-17 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Верстка одной страницы</span> от 3 500 руб. месяц</p>
-                <p class="fz-17 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Консультация специалиста</span> от 2 500 руб. месяц</p>
-                <p class="fz-17 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Продвижение</span> от 15 500 руб. месяц</p>
+                <p class="fs-20 fs-lg-24 fw-light">Услуги</p>
+                <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Техническая поддержка</span> от 15 000 руб. месяц</p>
+                <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Экспресс-дизайн</span> от 3 500 руб. месяц</p>
+                <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Верстка одной страницы</span> от 3 500 руб. месяц</p>
+                <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Консультация специалиста</span> от 2 500 руб. месяц</p>
+                <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Продвижение</span> от 15 500 руб. месяц</p>
             </div>
         </section>
 
@@ -446,10 +446,10 @@
                 </div>
                 <div class="row justify-content-between">
                     <div class="col-6 text-center">
-                        <p class="fz-2">До</p>
+                        <p class="fs-28 fs-lg-32">До</p>
                     </div>
                     <div class="col-6 text-center">
-                        <p class="fz-2">После</p>
+                        <p class="fs-28 fs-lg-32">После</p>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center">
@@ -491,7 +491,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
-                        <p class="fz-15 fw-light">Вопросы и ответы</p>
+                        <p class="fs-20 fs-lg-24 fw-light">Вопросы и ответы</p>
 
                         <div class="accordion accordion-faq" id="faq">
 
@@ -638,7 +638,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
-                        <p class="fz-17 fw-light">Закажи сайт для своего бизнеса</p>
+                        <p class="fs-24 fs-lg-28 fw-light">Закажи сайт для своего бизнеса</p>
                         <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                     </div>
                     <form class="needs-validation" novalidate>
@@ -691,7 +691,7 @@
                 <div class="modal-body">
                     <div class="d-flex align-items-center" style="min-height: 520px;">
                         <div class="text-center">
-                            <p class="fz-17 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
+                            <p class="fs-24 fs-lg-28 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
                             <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                         </div>
                     </div>
