--- a/shop-item.html
+++ b/shop-item.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-md-8 col-lg-4">
                         <div class="d-flex align-items-center justify-content-center py-1 py-md-2 py-lg-3">
-                            <span class="fz-2 text-uppercase color-white">Акции месяца!</span>
+                            <span class="fs-28 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
                             <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
                         </div>
                     </div>
@@ -118,8 +118,8 @@
                                 <h1 class="h2 fw-bold">Дрова-шоп</h1>
                             </div>
                             <div class="d-flex justify-content-between py-3">
-                                <p class="fz-15">№123456</p>
-                                <p class="fz-15">6900 руб.</p>
+                                <p class="fs-20 fs-lg-24">№123456</p>
+                                <p class="fs-20 fs-lg-24">6900 руб.</p>
                             </div>
                             <p><span class="color-blue">Обновлён</span>: Январь 2023</p>
                             <p><span class="color-blue">Опубликован</span>: Январь 2023</p>
@@ -155,7 +155,7 @@
                                 </a>
                                 <div class="card-body">
                                     <p class="small mb-0">WordPress</p>
-                                    <p class="fz-15"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
+                                    <p class="fs-20 fs-lg-24"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
                                     <div class="d-flex justify-content-between py-3">
                                         <p class="small">№123456</p>
                                         <p class="small">6900 руб.</p>
@@ -180,7 +180,7 @@
                                 </a>
                                 <div class="card-body">
                                     <p class="small mb-0">Bootstrap 5</p>
-                                    <p class="fz-15"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
+                                    <p class="fs-20 fs-lg-24"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
                                     <div class="d-flex justify-content-between py-3">
                                         <p class="small">№123456</p>
                                         <p class="small">6900 руб.</p>
@@ -205,7 +205,7 @@
                                 </a>
                                 <div class="card-body">
                                     <p class="small mb-0">Bootstrap 5</p>
-                                    <p class="fz-15"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
+                                    <p class="fs-20 fs-lg-24"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
                                     <div class="d-flex justify-content-between py-3">
                                         <p class="small">№123456</p>
                                         <p class="small">6900 руб.</p>
@@ -230,7 +230,7 @@
                                 </a>
                                 <div class="card-body">
                                     <p class="small mb-0">WordPress</p>
-                                    <p class="fz-15"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
+                                    <p class="fs-20 fs-lg-24"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
                                     <div class="d-flex justify-content-between py-3">
                                         <p class="small">№123456</p>
                                         <p class="small">6900 руб.</p>
@@ -326,7 +326,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
-                        <p class="fz-17 fw-light">Закажи сайт для своего бизнеса</p>
+                        <p class="fs-24 fs-lg-28 fw-light">Закажи сайт для своего бизнеса</p>
                         <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                     </div>
                     <form class="needs-validation" novalidate>
@@ -379,7 +379,7 @@
                 <div class="modal-body">
                     <div class="d-flex align-items-center" style="min-height: 520px;">
                         <div class="text-center">
-                            <p class="fz-17 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
+                            <p class="fs-24 fs-lg-28 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
                             <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                         </div>
                     </div>
