--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-md-8 col-lg-4">
                         <div class="d-flex align-items-center justify-content-center py-1 py-md-2 py-lg-3">
-                            <span class="fz-2 text-uppercase color-white">Акции месяца!</span>
+                            <span class="fs-28 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
                             <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
         <section class="section py-5">
             <div class="container">
                 <div class="mb-5">
-                    <p class="fz-15 fw-light mb-0">Для своего бизнеса</p>
+                    <p class="fs-20 fs-lg-24 fw-light mb-0">Для своего бизнеса</p>
                     <h1 class="text-uppercase fw-bold">Выбери готовый сайт</h1>
                 </div>
                 <div class="row gy-2 mb-4">
@@ -267,7 +267,7 @@
                                     </a>
                                     <div class="card-body">
                                         <p class="small mb-0">WordPress</p>
-                                        <p class="fz-15"><a class="text-decoration-none"
+                                        <p class="fs-20 fs-lg-24"><a class="text-decoration-none"
                                                 href="shop-item.html">Интернет-магазин мебели</a></p>
                                         <div class="d-flex justify-content-between py-3">
                                             <p class="small">№123456</p>
@@ -294,7 +294,7 @@
                                     </a>
                                     <div class="card-body">
                                         <p class="small mb-0">Bootstrap 5</p>
-                                        <p class="fz-15"><a class="text-decoration-none"
+                                        <p class="fs-20 fs-lg-24"><a class="text-decoration-none"
                                                 href="shop-item.html">Интернет-магазин мебели</a></p>
                                         <div class="d-flex justify-content-between py-3">
                                             <p class="small">№123456</p>
@@ -321,7 +321,7 @@
                                     </a>
                                     <div class="card-body">
                                         <p class="small mb-0">React JS</p>
-                                        <p class="fz-15"><a class="text-decoration-none"
+                                        <p class="fs-20 fs-lg-24"><a class="text-decoration-none"
                                                 href="shop-item.html">Интернет-магазин мебели</a></p>
                                         <div class="d-flex justify-content-between py-3">
                                             <p class="small">№123456</p>
@@ -348,7 +348,7 @@
                                     </a>
                                     <div class="card-body">
                                         <p class="small mb-0">WordPress</p>
-                                        <p class="fz-15"><a class="text-decoration-none"
+                                        <p class="fs-20 fs-lg-24"><a class="text-decoration-none"
                                                 href="shop-item.html">Интернет-магазин мебели</a></p>
                                         <div class="d-flex justify-content-between py-3">
                                             <p class="small">№123456</p>
@@ -375,7 +375,7 @@
                                     </a>
                                     <div class="card-body">
                                         <p class="small mb-0">WordPress</p>
-                                        <p class="fz-15"><a class="text-decoration-none"
+                                        <p class="fs-20 fs-lg-24"><a class="text-decoration-none"
                                                 href="shop-item.html">Интернет-магазин мебели</a></p>
                                         <div class="d-flex justify-content-between py-3">
                                             <p class="small">№123456</p>
@@ -402,7 +402,7 @@
                                     </a>
                                     <div class="card-body">
                                         <p class="small mb-0">WordPress</p>
-                                        <p class="fz-15"><a class="text-decoration-none"
+                                        <p class="fs-20 fs-lg-24"><a class="text-decoration-none"
                                                 href="shop-item.html">Интернет-магазин мебели</a></p>
                                         <div class="d-flex justify-content-between py-3">
                                             <p class="small">№123456</p>
@@ -429,7 +429,7 @@
                                     </a>
                                     <div class="card-body">
                                         <p class="small mb-0">WordPress</p>
-                                        <p class="fz-15"><a class="text-decoration-none"
+                                        <p class="fs-20 fs-lg-24"><a class="text-decoration-none"
                                                 href="shop-item.html">Интернет-магазин мебели</a></p>
                                         <div class="d-flex justify-content-between py-3">
                                             <p class="small">№123456</p>
@@ -456,7 +456,7 @@
                                     </a>
                                     <div class="card-body">
                                         <p class="small mb-0">WordPress</p>
-                                        <p class="fz-15"><a class="text-decoration-none"
+                                        <p class="fs-20 fs-lg-24"><a class="text-decoration-none"
                                                 href="shop-item.html">Интернет-магазин мебели</a></p>
                                         <div class="d-flex justify-content-between py-3">
                                             <p class="small">№123456</p>
@@ -483,7 +483,7 @@
                                     </a>
                                     <div class="card-body">
                                         <p class="small mb-0">WordPress</p>
-                                        <p class="fz-15"><a class="text-decoration-none"
+                                        <p class="fs-20 fs-lg-24"><a class="text-decoration-none"
                                                 href="shop-item.html">Интернет-магазин мебели</a></p>
                                         <div class="d-flex justify-content-between py-3">
                                             <p class="small">№123456</p>
@@ -610,7 +610,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
-                        <p class="fz-17 fw-light">Закажи сайт для своего бизнеса</p>
+                        <p class="fs-24 fs-lg-28 fw-light">Закажи сайт для своего бизнеса</p>
                         <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                     </div>
                     <form class="needs-validation" novalidate>
@@ -664,7 +664,7 @@
                 <div class="modal-body">
                     <div class="d-flex align-items-center" style="min-height: 520px;">
                         <div class="text-center">
-                            <p class="fz-17 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
+                            <p class="fs-24 fs-lg-28 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
                             <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                         </div>
                     </div>
