--- a/cases-item.html
+++ b/cases-item.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-md-8 col-lg-4">
                         <div class="d-flex align-items-center justify-content-center py-1 py-md-2 py-lg-3">
-                            <span class="fz-2 text-uppercase color-white">Акции месяца!</span>
+                            <span class="fs-28 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
                             <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
                         </div>
                     </div>
@@ -115,10 +115,10 @@
                     <div class="col-lg-4">
                         <div class="sticky-top">
                             <div class="mb-5">
-                                <p class="fz-15 fw-light mb-0">Клиент</p>
+                                <p class="fs-20 fs-lg-24 fw-light mb-0">Клиент</p>
                                 <h1 class="h2 fw-bold">Интернет-магазин для продажи дров</h1>
                             </div>
-                            <p class="fz-15">Что было сделано:</p>
+                            <p class="fs-20 fs-lg-24">Что было сделано:</p>
                             <div class="fw-light">
                                 <p>- Был выбран шаблон <a href="shop-item.html">№3445667</a> и заполнен по желанию заказчика в соответствии с  тематикой</p>
                                 <p>- Реализована заявочная система товаров. которая на этапе приёма заявки позволяет продавцу узнать какой конкретно товар хочет получить клиент и это без дополнительных действий от клиента. только номер телефона и имя</p>
@@ -205,7 +205,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
-                        <p class="fz-17 fw-light">Закажи сайт для своего бизнеса</p>
+                        <p class="fs-24 fs-lg-28 fw-light">Закажи сайт для своего бизнеса</p>
                         <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                     </div>
                     <form class="needs-validation" novalidate>
@@ -258,7 +258,7 @@
                 <div class="modal-body">
                     <div class="d-flex align-items-center" style="min-height: 520px;">
                         <div class="text-center">
-                            <p class="fz-17 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
+                            <p class="fs-24 fs-lg-28 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
                             <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                         </div>
                     </div>
