--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-md-8 col-lg-4">
                         <div class="d-flex align-items-center justify-content-center py-1 py-md-2 py-lg-3">
-                            <span class="fz-2 text-uppercase color-white">Акции месяца!</span>
+                            <span class="fs-28 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
                             <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                             <div class="py-5">
                                 <a class="btn btn-primary btn-lg" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
                             </div>
-                            <div class="fz-15">
+                            <div class="fs-20 fs-lg-24">
                                 <p>К нам можно приехать и все обсудить,<br> если у вас более крупный проект</p>
                                 <p>Понедельник — Пятница</p>
                                 <p class="color-blue">с 09:00 — 18:00</p>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
-                        <p class="fz-17 fw-light">Закажи сайт для своего бизнеса</p>
+                        <p class="fs-24 fs-lg-28 fw-light">Закажи сайт для своего бизнеса</p>
                         <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                     </div>
                     <form class="needs-validation" novalidate>
@@ -255,7 +255,7 @@
                 <div class="modal-body">
                     <div class="d-flex align-items-center" style="min-height: 520px;">
                         <div class="text-center">
-                            <p class="fz-17 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
+                            <p class="fs-24 fs-lg-28 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
                             <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
                         </div>
                     </div>
